# scrubiq

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml
docs/: CLI_REFERENCE.md  TESTING_GUIDE.md  TRAINING_GUIDE.md  TRAINING_PLAN.md
scripts/: benchmark.py  generate_test_corpus.py  train_tpfp.py
src/scrubiq/: __init__.py  __main__.py
src/scrubiq/auth/: __init__.py  config.py  graph.py  setup.py
src/scrubiq/classifier/: __init__.py  pipeline.py
src/scrubiq/classifier/detectors/: __init__.py  presidio.py  regex.py
src/scrubiq/classifier/extractors/: __init__.py  base.py  docx.py  eml.py  msg.py  pdf.py  pptx.py  registry.py  rtf.py  text.py  xlsx.py
src/scrubiq/cli/: __init__.py  main.py  ui.py
src/scrubiq/labeler/: __init__.py  aip.py  labeler.py
src/scrubiq/reporter/: __init__.py  html.py
src/scrubiq/review/: __init__.py  models.py  sampler.py  storage.py  tui.py
src/scrubiq/scanner/: __init__.py  results.py  scanner.py
src/scrubiq/storage/: __init__.py  audit.py  crypto.py  database.py
src/scrubiq/training/: __init__.py  data.py  model.py
test_corpus/: manifest.json
test_corpus/finance/: financial_doc_001.txt  financial_doc_002.txt  financial_doc_003.txt  financial_doc_004.txt  financial_doc_005.txt  financial_doc_006.txt  financial_doc_007.txt  financial_doc_008.txt  financial_doc_009.txt  financial_doc_010.txt  financial_doc_011.txt  financial_doc_012.txt  financial_doc_013.txt  financial_doc_014.txt  financial_doc_015.txt  financial_doc_016.txt  financial_doc_017.txt  financial_doc_018.txt  financial_doc_019.txt  financial_doc_020.txt  financial_doc_021.txt  financial_doc_022.txt  financial_doc_023.txt  financial_doc_024.txt  financial_doc_025.txt
test_corpus/general/: document_001.txt  document_002.txt  document_003.txt  document_004.txt  document_005.txt  document_006.txt  document_009.txt  document_011.txt  document_013.txt
test_corpus/hr/: employee_record_001.txt  employee_record_002.txt  employee_record_003.txt  employee_record_004.txt  employee_record_005.txt  employee_record_006.txt  employee_record_007.txt  employee_record_008.txt  employee_record_009.txt  employee_record_010.txt  employee_record_011.txt  employee_record_012.txt  employee_record_013.txt  employee_record_014.txt  employee_record_015.txt  employee_record_016.txt  employee_record_017.txt  employee_record_018.txt  employee_record_019.txt  employee_record_020.txt  employee_record_021.txt  employee_record_022.txt  employee_record_023.txt  employee_record_024.txt  employee_record_025.txt
test_corpus/medical/: patient_record_001.txt  patient_record_002.txt  patient_record_003.txt  patient_record_004.txt  patient_record_005.txt  patient_record_006.txt  patient_record_007.txt  patient_record_008.txt  patient_record_009.txt  patient_record_010.txt  patient_record_011.txt  patient_record_012.txt  patient_record_013.txt  patient_record_014.txt  patient_record_015.txt  patient_record_016.txt  patient_record_017.txt  patient_record_018.txt  patient_record_019.txt  patient_record_020.txt  patient_record_021.txt  patient_record_022.txt  patient_record_023.txt  patient_record_024.txt  patient_record_025.txt
test_corpus/test_data/: test_doc_001.txt  test_doc_002.txt  test_doc_003.txt
tests/: __init__.py  test_aip.py  test_cli_ui.py  test_config.py  test_extractors.py  test_graph.py  test_labeler.py  test_pipeline.py  test_presidio.py  test_regex_detector.py  test_reporter.py  test_results.py  test_review.py  test_scanner.py  test_setup.py  test_storage.py  test_training.py
training/scripts/: download_data.py  train.py
