[project]
name = "scrubiq"
version = "0.1.0"
description = "Find and protect sensitive data in Microsoft 365 and file shares"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "chillbot.io", email = "hello@chillbot.io"},
]
keywords = ["security", "data-classification", "microsoft-365", "pii", "phi", "pci"]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    # Extraction
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "pypdf>=3.0",
    "python-pptx>=0.6",
    "extract-msg>=0.45",
    "striprtf>=0.0.26",
    # Security / Encryption
    "cryptography>=41.0",
    "keyring>=24.0",
    # Microsoft Graph API
    "msal>=1.24",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
# NLP/NER for better detection of names, addresses
nlp = [
    "presidio-analyzer>=2.2",
    "spacy>=3.0",
]
# Training the TP/FP classifier
training = [
    "setfit>=1.0",
    "datasets>=2.0",
    "sentence-transformers>=2.0",
]
# All optional features
all = [
    "scrubiq[nlp]",
    "scrubiq[training]",
]

[project.scripts]
scrubiq = "scrubiq.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrubiq"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
